--- a/selmor/pom.xml
+++ b/selmor/pom.xml
@@ -67,6 +67,14 @@
     <artifactId>log4j-core</artifactId>
     <version>2.19.0</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/net.sourceforge.htmlunit/webdriver -->
+<dependency>
+    <groupId>net.sourceforge.htmlunit</groupId>
+    <artifactId>webdriver</artifactId>
+    <version>2.6</version>
+    <scope>test</scope>
+</dependency>
+
     
   </dependencies>
 
